--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
+    "rollup-pluginutils": "^2.8.2",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-i18n": "^3.0.2",
